# pronghorn

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RESUME.md  TODO.md  model_extract.md  pronghorn.toml  satellite.toml  server.toml
.github/workflows/: ci.yml
crates/pronghorn-audio/: Cargo.toml
crates/pronghorn-audio/src/: config.rs  format.rs  frame.rs  lib.rs  ring_buffer.rs
crates/pronghorn-pipeline/: Cargo.toml
crates/pronghorn-pipeline/examples/: test_kokoro.rs  test_whisper.rs
crates/pronghorn-pipeline/src/: config.rs  error.rs  ha_client.rs  hassil.rs  intent.rs  kokoro.rs  lib.rs  ollama.rs  resample.rs  resolver.rs  sherpa.rs  sherpa_tts.rs  stt.rs  tts.rs  vad.rs  whisper.rs
crates/pronghorn-satellite/: Cargo.toml
crates/pronghorn-satellite/src/: audio_io.rs  config.rs  error.rs  event_loop.rs  lib.rs  main.rs
crates/pronghorn-satellite/tests/: integration.rs
crates/pronghorn-server/: Cargo.toml
crates/pronghorn-server/src/: config.rs  error.rs  event_loop.rs  lib.rs  main.rs  orchestrator.rs
crates/pronghorn-server/tests/: integration.rs
crates/pronghorn-wake/: Cargo.toml
crates/pronghorn-wake/examples/: build_wakeword.rs
crates/pronghorn-wake/src/: config.rs  detector.rs  error.rs  lib.rs  reframe.rs  rustpotter_backend.rs
crates/pronghorn-wire/: Cargo.toml
crates/pronghorn-wire/src/: codec.rs  config.rs  error.rs  jitter_buffer.rs  lib.rs  packet.rs  session.rs  transport.rs
crates/pronghorn-wire/tests/: integration.rs
docs/: streaming-stt-research.md
scripts/: extract_whisper_model.py
src/: config.rs  main.rs
