[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jaggederest/pronghorn"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
pronghorn-audio = { path = "crates/pronghorn-audio" }
pronghorn-wire = { path = "crates/pronghorn-wire" }

[package]
name = "pronghorn"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast, low-latency voice assistant protocol with native UDP streaming"

[dependencies]
pronghorn-audio.workspace = true
pronghorn-wire.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
