[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jaggederest/pronghorn"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
ort = "2.0.0-rc.12"
rusty-whisper = { git = "https://github.com/jaggederest/rusty-whisper" }
rubato = "1"
cpal = "0.17"
kokoroxide = { git = "https://github.com/jaggederest/kokoroxide" }
pronghorn-audio = { path = "crates/pronghorn-audio" }
pronghorn-pipeline = { path = "crates/pronghorn-pipeline" }
pronghorn-satellite = { path = "crates/pronghorn-satellite" }
pronghorn-server = { path = "crates/pronghorn-server" }
pronghorn-wake = { path = "crates/pronghorn-wake" }
pronghorn-wire = { path = "crates/pronghorn-wire" }
