[package]
name = "pronghorn-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Audio types and utilities for Pronghorn voice protocol"

[dependencies]
bytes.workspace = true
serde.workspace = true

[dev-dependencies]
toml.workspace = true
