[package]
name = "pronghorn-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pipeline stage traits (STT, TTS, Intent) for Pronghorn voice protocol"

[features]
default = []
onnx = ["dep:ort"]
whisper = ["dep:rusty-whisper", "dep:hound", "dep:tempfile"]
kokoro = ["dep:kokoroxide"]
ollama = ["dep:reqwest"]
sherpa = ["dep:sherpa-rs"]

[dependencies]
pronghorn-audio.workspace = true
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
bytes.workspace = true
rubato.workspace = true
audioadapter-buffers = "2"
ort = { workspace = true, optional = true }
rusty-whisper = { workspace = true, optional = true }
hound = { version = "3.5", optional = true }
tempfile = { version = "3", optional = true }
kokoroxide = { workspace = true, optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
sherpa-rs = { version = "0.6", optional = true, default-features = false, features = ["download-binaries", "tts"] }

[dev-dependencies]
toml.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
hound = "3.5"
tracing-subscriber.workspace = true
