[package]
name = "pronghorn-satellite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pronghorn voice assistant satellite — wake word + audio streaming for Pi Zero 2"

[dependencies]
pronghorn-audio.workspace = true
pronghorn-wake.workspace = true
pronghorn-wire.workspace = true
bytes.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
pronghorn-pipeline.workspace = true
pronghorn-server.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
