[package]
name = "pronghorn-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pronghorn voice assistant server — pipeline orchestration for STT, intent, and TTS"

[dependencies]
pronghorn-audio.workspace = true
pronghorn-pipeline.workspace = true
pronghorn-wire.workspace = true
bytes.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
