[package]
name = "pronghorn-wake"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wake word detection for Pronghorn voice protocol"

[features]
default = []
rustpotter = ["dep:rustpotter"]

[dependencies]
pronghorn-audio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
rustpotter = { git = "https://github.com/jaggederest/rustpotter", optional = true }

[dev-dependencies]
toml.workspace = true
bytes.workspace = true

[[example]]
name = "build_wakeword"
required-features = ["rustpotter"]
